feat: create auth route and generate jwt
